--- a/page2.html
+++ b/page2.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Co chcete udělat?</h1>
 
-        <button onclick="location.href='keygen.html'">Připojit k internetu zařízení, které již někdy v síti Wi-Fi Local bylo.</button>
+        <button onclick="location.href='keygen.html'">Připojit k Wi-Fi Local zařízení, které již někdy v síti Wi-Fi Local bylo.</button>
         <button onclick="window.open('https://rghtzhtfhfzhrthzrtrdhfzzfhtz9595.mystrikingly.com', '_blank')">Přidat do Wi-Fi Local nové zařízení.</button>
     </div>
 </body>
