--- a/keygen.html
+++ b/keygen.html
@@ -34,7 +34,7 @@
     <div class="container">
         <h1>Keygen Ready!</h1>
         <p>
-            Použijte keygen:
+            Použijte keygen (háhodně vygenerované heslo):
             <span class="keygen-code" id="keygenValue">15TER+11@Poj--h00otkxBzHHxcc</span>
             <button class="copy-button" onclick="copyKeygen()">Zkopírovat do schránky</button>
         </p>
